fix footer vertical align

--- a/components/home.module.scss
+++ b/components/home.module.scss
@@ -231,6 +231,7 @@
     padding: 24px 16px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 
   &Links {
